Add base keyboard and style page
More or less mobile responsive but mobile phones wouldn't use the same
keyboard layout anyway

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>My Russian Keyboard</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -12,6 +12,68 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <h1>Моя Русская Клавиатура</h1>
+      <h2>My Russian Keyboard</h2>
+
+      <main id="container">
+        <textarea id="write" class="screen" rows="6" cols="60"></textarea>
+        <ul id="keyboard" class="keyboard">
+            <li class="symbol">ё</li>
+            <li class="symbol">1</li>
+            <li class="symbol">2</li>
+            <li class="symbol">3</li>
+            <li class="symbol">4</li>
+            <li class="symbol">5</li>
+            <li class="symbol">6</li>
+            <li class="symbol">7</li>
+            <li class="symbol">8</li>
+            <li class="symbol">9</li>
+            <li class="symbol">0</li>
+            <li class="symbol">-</li>
+            <li class="symbol">=</li>
+            <li class="delete lastitem">удалять</li>
+            <li class="tab">табуляция</li>
+            <li class="letter">й</li>
+            <li class="letter">ц</li>
+            <li class="letter">у</li>
+            <li class="letter">к</li>
+            <li class="letter">е</li>
+            <li class="letter">н</li>
+            <li class="letter">г</li>
+            <li class="letter">ш</li>
+            <li class="letter">щ</li>
+            <li class="letter">з</li>
+            <li class="symbol">х</li>
+            <li class="symbol">ъ</li>
+            <li class="symbol lastitem">\</li>
+            <li class="capslock">заглушки</li>
+            <li class="letter">a</li>
+            <li class="letter">s</li>
+            <li class="letter">d</li>
+            <li class="letter">f</li>
+            <li class="letter">g</li>
+            <li class="letter">h</li>
+            <li class="letter">j</li>
+            <li class="letter">k</li>
+            <li class="letter">l</li>
+            <li class="symbol">:</li>
+            <li class="symbol">'</li>
+            <li class="return lastitem">новая линия</li>
+            <li class="shift">капитал.</li>
+            <li class="letter">я</li>
+            <li class="letter">ч</li>
+            <li class="letter">с</li>
+            <li class="letter">м</li>
+            <li class="letter">и</li>
+            <li class="letter">т</li>
+            <li class="letter">ь</li>
+            <li class="symbol">б</li>
+            <li class="symbol">ю</li>
+            <li class="symbol">.</li>
+            <li class="shift lastitem">капитал.</li>
+            <li class="space lastitem">пробел</li>
+        </ul>
+      </main>
+
     </body>
 </html>
