Complete typing action for all non-shift editors
Complete typing action for Backspace, tab, enter, and space
Still need to contend with CapsLock and both shifts

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h2>My Russian Keyboard</h2>
 
       <main id="container">
-        <div id="screen" class="screen" rows="6" cols="60"></div>
+        <textarea id="screen" class="screen" rows="6" cols="60"></textarea>
         <ul id="keyboard" class="keyboard">
           <!-- First Row -->
             <li id="Backquote" class="symbol">
