Add clear button to remove all text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <body>
       <h1>Моя Русская Клавиатура</h1>
       <h2>My Russian Keyboard</h2>
-
       <main id="container">
         <textarea id="screen" class="screen" rows="6" cols="60"></textarea>
         <ul id="keyboard" class="keyboard">
@@ -234,6 +233,8 @@
             </li>
         </ul>
       </main>
-
+      <footer class="options">
+        <button id="clear" class="btn btn-light btn-small">убирать / clear</button>
+      </footer>
     </body>
 </html>
